k8s/templates/ingress-object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appname
  namespace: namespace
  labels:
    name: ingress-name
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: http, https
    # traefik.ingress.kubernetes.io/router.tls: true
    # Middleware:
    # traefik.ingress.kubernetes.io/router.middlewares.custom-middleware@kubernetescrd
spec:
  rules:
  - host: domain.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: appname-service
            port: 
              number: 8080
